--- a/includes/header.html
+++ b/includes/header.html
@@ -540,7 +540,7 @@
                     <div class="collapse menu-dropdown" id="sidebarTables">
                         <ul class="nav nav-sm flex-column">
                             <li class="nav-item">
-                                <a href="tables-basic.html" class="nav-link" data-key="t-basic-tables">Reporte Marcas</a>
+                                <a href="/pizzeria/modules/reporte/marca/index.html" class="nav-link" data-key="t-basic-tables">Reporte Marcas</a>
                             </li>
                             <li class="nav-item">
                                 <a href="tables-gridjs.html" class="nav-link" data-key="t-grid-js">Reporte Usuarios</a>
